obmondo-add-support-for-metrics-endpoint
Signed-off-by: Basit Hasan <basit@obmondo.com>

--- a/bitnami/rabbitmq-cluster-operator/templates/cluster-operator/servicemonitor.yaml
+++ b/bitnami/rabbitmq-cluster-operator/templates/cluster-operator/servicemonitor.yaml
@@ -47,4 +47,11 @@ spec:
       {{- if .Values.clusterOperator.metrics.serviceMonitor.relabelings }}
       relabelings: {{ toYaml .Values.clusterOperator.metrics.serviceMonitor.relabelings | nindent 8 }}
       {{- end }}
+    - port: metrics
+    - interval: {{ .Values.clusterOperator.metrics.serviceMonitor.interval }}
+      params:
+        family: {{- range $family := .Values.clusterOperator.metrics.serviceMonitor.params.family}}
+          - {{ $family }}
+          {{- end }}
+      path: /metrics/detailed
 {{- end }}
